<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="component_a_label">ComponentA</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="xlistview_header_hint_normal" translatable="false">下拉刷新</string>
    <string name="xlistview_header_hint_ready" translatable="false">松开刷新数据</string>
    <string name="xlistview_header_hint_loading" translatable="false">正在加载...</string>
    <string name="xlistview_header_last_time" translatable="false">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal" translatable="false"></string>
    <string name="xlistview_footer_hint_ready" translatable="false">松开载入更多</string>
    <string name="xlistview_footer_hint_loadover" translatable="false">全部加载完毕</string>
    <string name="title_activity_download" translatable="false">DownloadActivity</string>
    <string name="xlistview_footer_hint_loaderror" translatable="false">亲，网络不给力，请再给次机会</string>
    <string name="tips_not_wifi" translatable="false">您当前正在使用移动网络，继续播放将消耗流量</string>
    <string name="tips_not_wifi_confirm" translatable="false">继续播放</string>
    <string name="tips_not_wifi_cancel" translatable="false">停止播放</string>
    <string name="no_url" translatable="false">播放地址无效</string>
    <string name="replay" translatable="false">重播</string>
    <string name="click_to_restart" translatable="false">加载失败，点击重试</string>
    <string name="video_loading_faild" translatable="false">视频加载失败</string>
    <string name="recycler_tag" translatable="false">recycler_tag</string>
    <string name="on_line" translatable="false">在线</string>
    <string name="tips_not_wifi_video_size">正在流量播放状态，该视频大小为</string>
    <string name="on_line_pc" translatable="false">PC在线</string>
    <string name="on_line_mac" translatable="false">Mac在线</string>
    <string name="on_line_web" translatable="false">web在线</string>
    <string name="client_aos" translatable="false">Android</string>
    <string name="client_ios" translatable="false">iOS</string>
    <string name="on_line_busy" translatable="false">忙碌</string>
    <string name="off_line" translatable="false">离线</string>
    <string name="nim_status_bar_multi_messages_incoming" translatable="false">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text" translatable="false">%1$s有新消息</string>
    <string name="nim_status_bar_image_message" translatable="false">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message" translatable="false">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message" translatable="false">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message" translatable="false">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message" translatable="false">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message" translatable="false">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message" translatable="false">%1$s: 表情</string>
    <string name="nim_status_bar_unsupported_message" translatable="false">%1$s: 无法显示该内容</string>
    <string name="nim_status_bar_hidden_msg_content" translatable="false">你收到一条新消息</string>
    <string name="input_panel_guess" translatable="false">猜 拳</string>
    <string name="input_panel_audio_call" translatable="false">语音通话</string>
    <string name="input_panel_video_call" translatable="false">视频通话</string>
    <string name="input_panel_file" translatable="false">发送文件</string>
    <string name="input_panel_RTS" translatable="false">白 板</string>
    <string name="input_panel_snapchat" translatable="false">阅后即焚</string>
    <string name="input_panel_tip" translatable="false">Tip</string>
    <string name="input_panel_ack_msg" translatable="false">已读回执</string>
    <string name="message_history_query" translatable="false">群聊记录</string>
    <string name="message_search_title" translatable="false">搜索本地消息记录</string>
    <string name="message_clear" translatable="false">清空本地消息记录</string>
    <string name="message_info" translatable="false">聊天信息</string>
    <string name="text_ack_msg" translatable="false">已读</string>
    <string name="text_delivered_msg" translatable="false">送达</string>
    <string name="button_send" translatable="false">发送</string>
    <string name="attach_location" translatable="false">位置</string>
    <string name="attach_short_cut_message" translatable="false">常用语</string>
    <string name="attach_call_video" translatable="false">发起视频</string>
    <string name="attach_evaluation" translatable="false">评价</string>
    <string name="location_message" translatable="false">发送位置</string>
    <string name="please_check" translatable="false">操作失败，请稍后再试，原因：key检查出错!请在 AndroidManifest.xml 中检查key</string>
    <string name="text_fahuo" translatable="false">你们多久可以发货?</string>
    <string name="text_weight" translatable="false">这个我应该穿什么号的？我身高165，体重46kg</string>
    <string name="text_color" translatable="false"> 还有其他颜色的吗?</string>
    <string name="text_kuaidi" translatable="false">你们发的是什么快递?</string>
    <string name="unable_to_get_loaction" translatable="false">不能获取您的位置!</string>
    <string name="cant_find_pictures" translatable="false">找不到图片</string>
    <string name="system_is_regist" translatable="false">系统正在自动为您注册用户…</string>
    <string name="is_contact_customer" translatable="false">正在联系客服，请稍等…</string>
    <string name="is_contact_customer_failure_seconed" translatable="false">联系客服失败:</string>
    <string name="shopping" translatable="false">商城</string>
    <string name="conversation" translatable="false">会话</string>
    <string name="setting" translatable="false">设置</string>
    <string name="qrcode" translatable="false">扫描</string>
    <string name="qrcode_success" translatable="false">二维码扫描成功</string>
    <string name="qrcode_invalid" translatable="false">二维码无效</string>
    <string name="qrcode_fail" translatable="false">二维码扫描失败</string>
    <string name="qrcode_permission_fail" translatable="false">打开摄像头失败，请检查权限！</string>
    <string name="customernumber" translatable="false"> IM服务号</string>
    <string name="connect_customer" translatable="false"> 联系客服</string>
    <string name="feedback" translatable="false"> 意见反馈</string>
    <string name="history_record" translatable="false">历史记录</string>
    <string name="set_nick" translatable="false">设置昵称</string>
    <string name="set_tenantId" translatable="false">操作失败，请稍后再试，原因：租户ID(TenantId)</string>
    <string name="set_leave_messageid" translatable="false">操作失败，请稍后再试，原因：留言ID(projectId)</string>
    <string name="login_user_nick" translatable="false">登录用户昵称</string>
    <string name="customer_account" translatable="false">客服账号</string>
    <string name="pop_pre_sales" translatable="false">售前客服</string>
    <string name="pop_after_sales" translatable="false">售后客服</string>
    <string name="register_user_fail" translatable="false">注册失败!</string>
    <string name="leave_title" translatable="false">留言</string>
    <string name="leave_name" translatable="false">名字:</string>
    <string name="leave_phone" translatable="false">电话:</string>
    <string name="leave_email" translatable="false">邮箱:</string>
    <string name="leave_theme" translatable="false">主题:</string>
    <string name="leave_detail" translatable="false">详细信息</string>
    <string name="leave_content" translatable="false">输入留言</string>
    <string name="leave_sending" translatable="false">正在发送中…</string>
    <string name="delete_message" translatable="false">删除消息</string>
    <string name="copy_message" translatable="false">复制消息</string>
    <string name="delete_voice" translatable="false">删除语音</string>
    <string name="delete" translatable="false">删除</string>
    <string name="Making_sure_your_location" translatable="false">正在确定你的位置…</string>
    <string name="em_tip_wating" translatable="false">请稍等…</string>
    <string name="em_tip_request_fail" translatable="false">请求失败</string>
    <string name="title_satifisfaction_eval" translatable="false">满意度评价</string>
    <string name="nick_service" translatable="false">客服昵称</string>
    <string name="tip_eval" translatable="false">请对我的服务做出评价</string>
    <string name="hint_input_evaluation" translatable="false">输入文字评价</string>
    <string name="tip_btn_sumbit" translatable="false">提交</string>
    <string name="tip_btn_evaluation" translatable="false">立即评价</string>
    <string name="empty_view_tip" translatable="false">暂无数据</string>
    <string name="audio_download_suc" translatable="false">语音下载成功</string>
    <string name="file_download_fail" translatable="false">文件下载失败</string>
    <string name="file_cannot_be_opened" translatable="false">文件无法打开</string>
    <string name="user_already_exists" translatable="false">用户已经存在</string>
    <string name="no_register_authority" translatable="false">无开放注册权限</string>
    <string name="file_upload_fail" translatable="false">文件上传失败</string>
    <string name="login_user_noti" translatable="false">请先登录</string>
    <string name="comment_suc" translatable="false">评论成功</string>
    <string name="comment_fail" translatable="false">评论失败</string>
    <string name="file_uploading" translatable="false">文件上传中…</string>
    <string name="comment_content_not_null" translatable="false">评论内容不能为空</string>
    <string name="please_wait_noti" translatable="false">请等待…</string>
    <string name="send_suc" translatable="false">发送成功</string>
    <string name="app_key_cannot_be_empty" translatable="false">设置失败,原因：appkey不能为空</string>
    <string name="cus_account_cannot_be_empty" translatable="false">设置失败,原因：IM服务号不能为空</string>
    <string name="app_key_format_wrong" translatable="false">appkey格式不正确，设置失败!</string>
    <string name="app_key_modify_fail" translatable="false">修改appkey失败!</string>
    <string name="short_cut_msg" translatable="false">常用语</string>
    <string name="comment_load_fail" translatable="false">评论加载出错</string>
    <string name="note_detail" translatable="false">留言详情</string>
    <string name="note_reply" translatable="false">回复</string>
    <string name="note_id" translatable="false">留言ID:</string>
    <string name="note_subject" translatable="false">主题:</string>
    <string name="note_name" translatable="false">访客昵称:</string>
    <string name="note_content" translatable="false">内容:</string>
    <string name="note_phone" translatable="false">手机:</string>
    <string name="note_qq" translatable="false">QQ:</string>
    <string name="note_weibo" translatable="false">微博:</string>
    <string name="note_email" translatable="false">邮件:</string>
    <string name="note_responses" translatable="false">评论</string>
    <string name="new_comment_title" translatable="false">写评论</string>
    <string name="new_comment_hint" translatable="false">写评论…</string>
    <string name="new_comment_attach" translatable="false">添加附件</string>
    <string name="new_comment_talk" translatable="false">按住录音</string>
    <string name="The_other_is_not_online" translatable="false">对方不在线</string>
    <string name="Is_not_yet_connected_to_the_server" translatable="false">尚未连接至服务器</string>
    <string name="illegal_user_name" translatable="false">用户名不合法</string>
    <string name="The_other_is_on_the_phone" translatable="false">对方正在通话中</string>
    <string name="can_not_connect_chat_server_connection" translatable="false">连接不到聊天服务器</string>
    <string name="not_connect_to_server" translatable="false">尚未连接至服务器，请稍后重试</string>
    <string name="Are_connected_to_each_other" translatable="false">正在连接对方……</string>
    <string name="x7_MainActivity_tabName1" translatable="false">游戏</string>
    <string name="x7_MainActivity_tabName2" translatable="false">群聊</string>
    <string name="x7_MainActivity_tabName3" translatable="false">交易</string>
    <string name="x7_MainActivity_tabName4" translatable="false">我的</string>
    <string name="x7_xml_close">关闭</string>
    <string name="x7_xml_complete">完成</string>
    <string name="x7_xml_rule">规则</string>
</resources>